fix format block and unwrap

--- a/components/Editor/styles.scss
+++ b/components/Editor/styles.scss
@@ -34,7 +34,7 @@ $font: 16px sans-serif;
 
   :global(.checklist-item) {
     display: flex;
-    padding-left: 1rem;
+    padding-left: 22px;
   }
 
   :global(.checkbox) {
